--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="project-tile">
             <div class="hover">
                 <a class="project-link" href="index.html">
-                    <img src="images/productlandingpage.jpg" height="325" width="425" alt="Product Landing Page"></a>
+                    <img src="images/productlandingpage.jpg" height="325" width="425" alt=""></a>
                     <p class="project-tiles">Product Landing Page</p></div>
             <div class="hover">
                 <a class="project-link" href="index.html">
-                    <img src="images/techdocpage.jpg" height="325" width="425" alt="Technical Documentation Page"></a>
+                    <img src="images/techdocpage.jpg" height="325" width="425" alt=""></a>
                     <p class="project-tiles">Technical Documentation Page</p></div>
             <div class="hover">
                 <a class="project-link" href="index.html">
-                    <img src="images/caninecompanions.jpg" height="325" width="425" alt="The Canine Companions website"></a>
+                    <img src="images/caninecompanions.jpg" height="325" width="425" alt=""></a>
                     <p class="project-tiles">The Canine Companions</p></div>
             <div class="hover">
                 <a class="project-link" href="index.html">
-                    <img src="images/jkconstructivesolutions.jpg" height="325" width="425" alt="J &amp; K Contructive Solutions website"></a>
+                    <img src="images/jkconstructivesolutions.jpg" height="325" width="425" alt=""></a>
                     <p class="project-tiles">J &amp; K Constructive Solutions</p></div>
         </div> 
         <br><br>     
