--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RWD Personal Web Page</title>
+    <title>Take2Coder -- Front-end Web Developer</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@600&family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/de5a9048ef.js" crossorigin="anonymous"></script>
