--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,7 +52,7 @@
         <h1>Contact Me</h1>   
         <ul id="profile-list">
             <li class="profile-item"><i class="fas fa-at"></i><a class="profile-link" href="mailto:take2coder@gmail.com"> Email</a></li>
-            <li class="profile-item"><i class="fab fa-github"></i><a id="profile-link" href="index.html"> Github</a></li>
+            <li class="profile-item"><i class="fab fa-github"></i><a id="profile-link" href="https://github.com/take2coder" target="_blank"> Github</a></li>
             <li class="profile-item"><i class="fab fa-twitter"></i><a class="profile-link" href="https://twitter.com/take2coder" target="_blank"> Twitter</a></li>
         </ul>     
     </section>
